[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Samuel Yvon <samuelyvon9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
